# upgrade-advisor

./: .env_reference  .gitignore  .python-version  README.md  app.py  config.py  pyproject.toml  requirements.txt  ruff.toml
src/upgrade_advisor/: app.py  config.py  const.py  misc.py  theme.py
src/upgrade_advisor/agents/: gh.py  package.py  prompts.py  tools.py
src/upgrade_advisor/agents/tools/: parse_response.py  pypi_api.py  tools.py  uv_resolver.py
src/upgrade_advisor/chat/: chat.py  prompts.py
src/upgrade_advisor/schema/: __init__.py  schema.py
src/upgrade_advisor/tools/: __init__.py  tools.py
tests/: requirements.txt  test1.toml  test_tools.py
