[project]
name = "upgrade-advisor"
version = "0.1.0"
description = "An AI-powered GitHub App that suggests dependency upgrades for your repositories."
authors = [
    { name = "Geevarghese George", email = "4496097+thatgeeman@users.noreply.github.com" },
]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio[oauth] (>=6.0.1,<7.0.0)",
    "mcp (>=1.21.1,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "smolagents[mcp] (>=1.22.0,<2.0.0)",
    "anyio (>=4.11.0,<5.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "ddgs (>=9.9.1,<10.0.0)",
    "uv (>=0.9.11,<0.10.0)",
    "markdownify (>=1.2.2,<2.0.0)",
    "tomli (>=2.4.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
readme = "README.md"
package-mode = true
packages = [{ include = "upgrade_advisor", from = "src" }]
